@@ -18,6 +18,7 @@
         * Added isFOO_A synonyms for all character classification isFOO
           macros
    * Provide LIKELY/UNLIKELY branch prediction
+   * Provide av_tindex/av_top_index
 
  3.35 - 2016-06-17
 
